added project details and responsive and image padding

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" href="/image/ashishkumarpalai.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- calender -->
@@ -23,7 +24,7 @@
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="menu-btn">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" style="color: white" id="hamburgger"></i>
         </label>
         <ul>
             <li><a class="active nav-link home" href="#home">Home</a></li>
@@ -39,7 +40,7 @@
     <br>
     <!-- ==============home section ============-->
     <div id="home" class="home">
-        <img class="home-img" style="object-fit: cover;" src="./image/ashishkumarpalai.png" alt="home img">
+        <img class="home-img" style="object-fit: cover;" src="./image/Untitled Project.jpg" alt="home img">
         <h1>Hi, I'm Ashish</h1>
         <br>
         <h2>I'm Full Stack Developer</h2>
@@ -118,6 +119,35 @@
                 <img src="./image/git.jpg" alt="Skill 2" class="skills-card-img">
                 <h5 class="skills-card-name">Git</h5>
             </div>
+
+        </div>
+        <h1 class="title-a">Tools</h1>
+        <p class="text">Here all Tool i know</p>
+        <div class="container">
+            <div class="skills-card">
+                <img src="./image/vscode.jpg" alt="Skill 1" class="skills-card-img">
+                <h5 class="skills-card-name">Visual Studio Code</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/git.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Git</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/postman.png" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Postman</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/codepen.webp" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">CodePen</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/netlify.png" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Netlify</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/cyclic.png" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Cyclic</h5>
+            </div>
         </div>
     </div>
     <!-- ==============projects section ============-->
@@ -128,7 +158,10 @@
             <div class="project-card">
                 <img src="./image/quickbite.png" alt="">
                 <h2 class="project-title">Quick Bite</h2>
-                <p class="project-description">This website is a clone of "Chick-fil-A One" food ordering website </p>
+                <p class="project-description">This website is a clone of "Chick-fil-A One" food ordering website .
+                    Chick-fil-A is an American fast food restaurant chain which is the country's largest which
+                    specializes in chicken sandwiches. Headquartered in College Park, Georgia, Chick-fil-A operates
+                    2,900 restaurants across 48 states, as well as in the District of Columbia and Puerto Rico. </p>
                 <br>
                 <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT</p>
                 <br>
@@ -142,7 +175,9 @@
             <div class="project-card">
                 <img src="./image/nowopen.png" alt="">
                 <h2 class="project-title">Now Open</h2>
-                <p class="project-description">This website is a clone of "OverStock" E-commers website</p>
+                <p class="project-description">Overstock is an online retailer that offers a wide range of products,
+                    including furniture, home decor, electronics, jewelry, and more. If you're interested in creating a
+                    project based on the Overstock website</p>
                 <br>
                 <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT </p>
                 <br>
@@ -157,7 +192,9 @@
             <div class="project-card">
                 <img src="./image/marketzone.png" alt="">
                 <h2 class="project-title">Market Zone</h2>
-                <p class="project-description">This website is a clone of "OLX" E-commers website</p>
+                <p class="project-description">This website is a clone of "OLX" E-commers website . The OLX marketplace
+                    is a platform for buying and selling services and goods such as electronics, fashion items,
+                    furniture, household goods, cars and bikes.</p>
                 <br>
                 <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs
                 </p>
@@ -171,17 +208,33 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./image/marketzone.png" alt="">
-                <h2 class="project-title">Market Zone</h2>
-                <p class="project-description">This website is a clone of "OLX" E-commers website</p>
+                <img src="./image/timeframe.png" alt="">
+                <h2 class="project-title">Time Frame</h2>
+                <p class="project-description">A time tracker with additional workforce management features that will help you develop a high-performing team that smashes goals every time..</p>
                 <br>
                 <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs
                 </p>
                 <br>
                 <div class="project-link">
-                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689"
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/Time-frame"
                         target="_blank">GitHub</a>
-                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/"
+                    <a class="project-deployed-link" href="https://comforting-bonbon-0a3e0a.netlify.app/"
+                        target="_blank">Deployed
+                        link</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="./image/vetspot.png" alt="">
+                <h2 class="project-title">Vetspot</h2>
+                <p class="project-description">The Veterinary System Website is a comprehensive solution designed to streamline and optimize the operations of a veterinary clinic. It offers features such as patient management, appointment scheduling, billing and invoicing, inventory management, and reporting and analytics</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs
+                </p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/Vetspot"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://unarmed-science-115.vercel.app/"
                         target="_blank">Deployed
                         link</a>
                 </div>
@@ -213,10 +266,10 @@
     </div>
     <br>
 
-    <div id="graph">
+    <!-- <div id="graph">
         <img src="https://github-readme-activity-graph.cyclic.app/graph?username=ashishkumarpalai&theme=react-dark&bg_color=20232a&hide_border=true"
             width="100%" />
-    </div>
+    </div> -->
     </p>
     <!-- ===========================contact section ============-->
     <div id="contact">
@@ -253,7 +306,7 @@
 <!-- =====================================================calender -->
 <script>
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai");
-    // or enable responsive functionality ok
+    // or enable responsive functionality
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai", { responsive: true });
 </script>
 <script>
