updated resume add and some project add

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img class="home-img" style="object-fit: cover;" src="./image/Untitled Project.jpg" alt="home img">
         <h1>Hi, I'm Ashish</h1>
         <br>
-        <h2>I'm Full Stack Developer</h2>
+        <h2>I'm NodeJs Developer</h2>
         <h2>Always enthusiastic to learn and would love to work on new technologies.</h2>
 
     </div>
@@ -156,6 +156,41 @@
         <p>Here is my projects to represent you my Experience</p>
         <div id="projectsdiv">
             <div class="project-card">
+                <img src="./image/marketzone.png" alt="">
+                <h2 class="project-title">Market Zone</h2>
+                <p class="project-description">This website is a clone of "OLX" E-commers website . The OLX marketplace
+                    is a platform for buying and selling services and goods such as electronics, fashion items,
+                    furniture, household goods, cars and bikes.</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs
+                </p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/"
+                        target="_blank">Deployed
+                        link</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="./image/cinematrix.png" alt="">
+                <h2 class="project-title">CineMatrix</h2>
+                <p class="project-description">A user-friendly movie management system that simplifies cinema operations. Effortlessly handle movies, shows, events, and user data for seamless organization. Streamline your cinema business with ease.</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :-Github | Responsive Web Design | JavaScript | HTML5 |
+                    CSS3 | MongoDB | RESTful APIs | Python | Flask
+                </p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/CineMatrix"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://cine-matrix.vercel.app/index.html"
+                        target="_blank">Deployed
+                        link</a>
+                </div>
+            </div>
+            <div class="project-card">
                 <img src="./image/quickbite.png" alt="">
                 <h2 class="project-title">Quick Bite</h2>
                 <p class="project-description">This website is a clone of "Chick-fil-A One" food ordering website .
@@ -189,24 +224,7 @@
                         link</a>
                 </div>
             </div>
-            <div class="project-card">
-                <img src="./image/marketzone.png" alt="">
-                <h2 class="project-title">Market Zone</h2>
-                <p class="project-description">This website is a clone of "OLX" E-commers website . The OLX marketplace
-                    is a platform for buying and selling services and goods such as electronics, fashion items,
-                    furniture, household goods, cars and bikes.</p>
-                <br>
-                <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs
-                </p>
-                <br>
-                <div class="project-link">
-                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689"
-                        target="_blank">GitHub</a>
-                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/"
-                        target="_blank">Deployed
-                        link</a>
-                </div>
-            </div>
+     
             <div class="project-card">
                 <img src="./image/timeframe.png" alt="">
                 <h2 class="project-title">Time Frame</h2>
@@ -287,12 +305,12 @@
             <div class="contact-text">
                 <h2>Get in Touch</h2>
                 <div>
-                    <a id="contact-email"><i class="fa-solid fa-envelope"></i>ashishkumarpalai2000@gmail.com</a>
+                    <a id="contact-email"><i class="fa-solid fa-envelope"></i>  ashishkumarpalai2000@gmail.com</a>
                     <a id="contact-phone"><i class="fa-solid fa-phone"></i> +91 8917299117</a>
                     <a target="_blank" href="https://github.com/ashishkumarpalai" id="contact-github"><i
-                            class="fa-brands fa-github"></i>ashishkumarpalai</a>
+                            class="fa-brands fa-github"></i>  ashishkumarpalai</a>
                     <a target="_blank" href="https://www.linkedin.com/in/ashishkumarpalai/" id="contact-linkedin"><i
-                            class="fa-brands fa-linkedin"></i>ashishkumarpalai</a>
+                            class="fa-brands fa-linkedin"></i>  ashishkumarpalai</a>
                 </div>
             </div>
         </div>
@@ -312,12 +330,12 @@
 <script>
     let resumeBtn = document.querySelector("#resume-link-2")
     resumeBtn.addEventListener("click", () => {
-        window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
+        window.open("https://drive.google.com/file/d/1hKBGbQTHDDHOM6hlqd_derokkQJ_kAxb/view")
     })
 
     let resumeBtn2 = document.querySelector("#resume-link-1")
     resumeBtn2.addEventListener("click", () => {
-        window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
+        window.open("https://drive.google.com/file/d/1hKBGbQTHDDHOM6hlqd_derokkQJ_kAxb/view")
     })
 
 </script>
